--- a/index.html
+++ b/index.html
@@ -135,28 +135,31 @@
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                      ></a
+                    >
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -175,28 +178,30 @@
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -215,28 +220,30 @@
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -255,28 +262,30 @@
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"
                       ><svg width="16" height="16" class="social-networks-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
-                    ></a>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -289,114 +298,77 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <div class="portfolio-descr">
-                <img
-                  src="./images/banking_app.jpg"
-                  alt="banking app"
-                  width="360"
-                  class="portfolio-img"
-                />
-                <p class="descr-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <div class="app-descr"><img
+                src="./images/banking_app.jpg"
+                alt="banking app"
+                width="360"
+                class="portfolio-img"
+              /><p class="app-descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div class="portfolio-descr">
-                <img
-                  src="./images/cashless_payment.jpg"
-                  alt="cashless payment"
-                  width="360"
-                  class="portfolio-img"
-                />
-                <p class="descr-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <div class="app-descr"><img
+                src="./images/cashless_payment.jpg"
+                alt="cashless payment"
+                width="360"
+                class="portfolio-img"
+              /><p class="app-descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+
               <div class="app">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div>
-                <img
-                  src="./images/meditation_app.jpg"
-                  alt="meditationapp"
-                  width="360"
-                  class="portfolio-img"
-                />
-                <p class="descr-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <img
+                src="./images/meditation_app.jpg"
+                alt="meditationapp"
+                width="360"
+                class="portfolio-img"
+              />
+
               <div class="app">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div>
-                <img
-                  src="./images/taxi_service.jpg"
-                  alt="taxi service"
-                  width="360"
-                  class="portfolio-img"
-                />
-                <p class="descr-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <img
+                src="./images/taxi_service.jpg"
+                alt="taxi service"
+                width="360"
+                class="portfolio-img"
+              />
+
               <div class="app">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div>
-                <img
-                  src="./images/screen_illustrations.jpg"
-                  alt="screen illustrations"
-                  width="360"
-                  class="portfolio-img"
-                />
-                <p class="descr-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <img
+                src="./images/screen_illustrations.jpg"
+                alt="screen illustrations"
+                width="360"
+                class="portfolio-img"
+              />
+
               <div class="app">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div>
-                <img
-                  src="./images/online_courses.jpg"
-                  alt="online courses"
-                  width="360"
-                  class="portfolio-img"
-                />
-                <p class="descr-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              <img
+                src="./images/online_courses.jpg"
+                alt="online courses"
+                width="360"
+                class="portfolio-img"
+              />
+
               <div class="app">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
